# mediatek-sdk

./: README.md
RT288x_SDK/doc/: APSoC_License_List.xls
RT288x_SDK/source/: History  Makefile  PatchList
RT288x_SDK/source/config/: config.in  mkconfig  setconfig
RT288x_SDK/source/lib/: Makefile  Rules.mak
RT288x_SDK/source/lib/e2fsprogs-1.41.3/: MCONFIG.in
RT288x_SDK/source/lib/libbluetooth/: Makefile
RT288x_SDK/source/lib/libc/: Makefile
RT288x_SDK/source/lib/libdlna-0.2.3/: Makefile  config.mak  configure  libdlna.pc
RT288x_SDK/source/lib/libevent-2.0.2-alpha/: evdns.c  makefile  mkinstalldirs
RT288x_SDK/source/lib/libexif/: makefile
RT288x_SDK/source/lib/libffmpeg-0.5/: Makefile  common.mak  config.err  config.h  config.mak  ffserver.d
RT288x_SDK/source/lib/libflac/: Makefile.in  config.h  makefile
RT288x_SDK/source/lib/libflex/: Makefile
RT288x_SDK/source/lib/libgdbm-1.8.3/: Makefile
RT288x_SDK/source/lib/libgmp/: Makefile.in  ansi2knr.c  config.h  config.m4  config.status  configure.in  gen-fac_ui  libtool  longlong.h  makefile
RT288x_SDK/source/lib/libid3tag-0.15.1b/: CHANGES  CREDITS  Makefile  Makefile.am  README  TODO  compat.gperf  compat.h  configure.ac  crc.c  crc.h  debug.c  debug.h  field.c  field.h  file.c  file.h  frame.c  frame.h  frametype.gperf  frametype.h  genre.c  genre.dat.in  genre.dat.sed  genre.h  global.h  id3tag.h  latin1.c  latin1.h  parse.c  parse.h  render.c  render.h  tag.c  tag.h  ucs4.c  ucs4.h  utf16.c  utf16.h  utf8.c  (+5 more)
RT288x_SDK/source/lib/libjpeg/: LICENSE  Makefile  jdmainct.c
RT288x_SDK/source/lib/libm/: math_private.h
RT288x_SDK/source/lib/libncurses-5.7/: AUTHORS  INSTALL  Makefile.in  Makefile.os2  NEWS  README  README.emx  TO-DO  aclocal.m4  announce.html.in  configure.in  convert_configure.pl  dist.mk  makefile  mk-0th.awk  mk-1st.awk  mk-2nd.awk  mk-hdr.awk  mkdirs.sh  tar-copy.sh
RT288x_SDK/source/lib/libnl/: Makefile  config.status  libtool  makefile
RT288x_SDK/source/lib/libntfs-3g/: Makefile  compat.c
RT288x_SDK/source/lib/libnvram/: Makefile  nvram.h  nvram_env.c
RT288x_SDK/source/lib/libogg/: README  makefile
RT288x_SDK/source/lib/libpcap-1.0.0/: CHANGES  INSTALL.txt  Makefile.in  README  aclocal.m4  arcnet.h  atmuni31.h  bpf_dump.c  bpf_image.c  configure.in  dlpisubs.c  dlpisubs.h  etherent.c  ethertype.h  fad-getad.c  fad-gifc.c  fad-glifc.c  fad-null.c  fad-win32.c  filtertest.c  gencode.c  gencode.h  grammar.y  inet.c  llc.h  makefile  nametoaddr.c  nlpid.h  optimize.c  pcap-bpf.c  pcap-bpf.h  pcap-bt-linux.c  pcap-bt-linux.h  pcap-dag.c  (+81 more)
RT288x_SDK/source/lib/libupnp-1.6.6-dms/threadutil/: Makefile  Makefile.am  Makefile.in
RT288x_SDK/source/lib/libupnp-1.6.6-dms/threadutil/inc/: ThreadPool.h
RT288x_SDK/source/lib/libupnp-1.6.6-dms/threadutil/src/: ThreadPool.c
RT288x_SDK/source/linux-2.6.21.x/: Makefile
RT288x_SDK/source/linux-2.6.36MT.x/: Makefile
RT288x_SDK/source/uClibc-0.9.33.2/: Makefile  Makefile.in  Makerules
RT288x_SDK/source/user/: Makefile
RT288x_SDK/source/user/ppp-2.4.2/pppd/plugins/radius/radiusclient/include/: Makefile.am  Makefile.in  includes.h  messages.h  pathnames.h  radiusclient.h
RT288x_SDK/source/user/ppp-2.4.2/pppd/plugins/radius/radiusclient/patches/: Makefile.am  Makefile.in  README
RT288x_SDK/source/user/ppp-2.4.2/pppd/plugins/radius/radiusclient/src/: Makefile.am  Makefile.in  local.c  radacct.c  radexample.c  radius.c  radlogin.c  radlogin.h  radstatus.c
RT288x_SDK/source/user/wsc_upnp/libupnp-1.3.1/ixml/: Makefile  Makefile.am  Makefile.in
RT288x_SDK/source/user/wsc_upnp/libupnp-1.3.1/ixml/doc/: Makefile  Makefile.am  Makefile.in
RT288x_SDK/toolchain/: README  squashfs4.2.tar.bz2  xz-5.0.3.tar.bz2
RT288x_SDK/toolchain/mksquash_lzma-3.0/: Makefile
RT288x_SDK/toolchain/mksquash_lzma-3.2/: Makefile  sqlzma.h  sqmagic.h
(+9577 files in other folders)
